--- a/admin/formUser.html
+++ b/admin/formUser.html
@@ -108,6 +108,7 @@
 					}
 				}
 
+				$('[name=username]').attr('readOnly', 'true');
 				p_formHandler('syncrom', 'updateData', 'user.html');
 			}
 		</script>
