--- a/admin/formCustomer.html
+++ b/admin/formCustomer.html
@@ -28,66 +28,108 @@
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
 		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
-		<!-- <script type="text/javascript" src="../assets/js/nicEdit.js"></script>	 -->
+		<script type="text/javascript" src="../assets/js/public.js"></script>	
 
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				customer();
+				loadData();
 			});
-			function customer(){
+			function loadData(){
 				var html = '';
 
 				html = html +
-				'<div class="input-frame col-md-6">'+
-					'<h3><b>New Customer</b></h3>'+
-					'<form>'+
+				'<form id="syncrom" f-group="operation" f-target="customer" enctype="multipart/form-data">'+
+					'<div class="input-frame col-md-6">'+
+						'<h3><b>New Customer</b></h3>'+
 						'<div class="form-group">'+
 							'<label>Full Name</label>'+
-							'<input type="text" class="form-control">'+
+							'<input name="name" type="text" class="form-control">'+
+							'<input name="idData" type="hidden">'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<label>Address</label>'+
-							'<textarea class="form-control" id="editor"></textarea>'+
+							'<textarea name="address" class="form-control" id="editor"></textarea>'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<div class="col-md-8 syn-clear">'+
 								'<label>City</label>'+
-								'<input type="text" class="form-control">'+
+								'<input name="city" type="text" class="form-control">'+
 							'</div>'+
 							'<div class="col-md-4 syn-clear">'+
 								'<label>Zip Code</label>'+
-								'<input type="text" class="form-control">'+
+								'<input name="zipCode" type="text" class="form-control">'+
 							'</div>'+
 							'<div class="clearfix"></div>'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<label>Country</label>'+
-							'<select class="form-control">'+
+							'<select name="country" class="form-control">'+
 								countryListOption() +
 							'</select>'+
 						'</div>'+
 						'<div class="form-group">'+
 							'<label>Mobile Phone</label>'+
-							'<input type="text" class="form-control">'+
+							'<input name="phone" type="text" class="form-control">'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>Email</label>'+
-							'<input type="email" class="form-control">'+
+							'<label>Company</label>'+
+							'<input name="company" type="text" class="form-control">'+
 						'</div>'+
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
-							'<button class="btn btn-warning" type="button">Create</button>'+
-							'<button class="btn btn-warning" type="button">Cancel</button>'+
+							'<button class="btn btn-warning" type="submit">Create</button>'+
+							'<a href="customer.html" class="btn btn-warning">Cancel</a>'+
 						'</div>'+
-					'</form>'+
-				'</div>';
+					'</div>' +
+					'<div class="input-frame col-md-6">'+
+						'<div class="form-group">'+
+							'<label>Avatar</label>'+
+						'</div>'+
+						'<div class="form-group text-center">'+
+							'<img id="preview" name-tag="picture" class="medium-image" src="../assets/default/user.gif">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						'</div>' +
+						'<div class="form-group">'+
+							'<label>Email / Username</label>'+
+							'<input name="email" type="email" class="form-control">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Password</label>'+
+							'<input name="password" type="password" class="form-control">'+
+						'</div>'+
+						'<div class="form-group">'+
+							'<label>Retype Password</label>'+
+							'<input name="retype_password" type="password" class="form-control">'+
+						'</div>'+
+					'</div>' +
+				'</form>';
 
-				// html = html + '</div>';
 				$('main.parent-admin .main-content').append(html);
 
-				// //textarea editor
-				// new nicEditor({maxHeight : 100, iconsPath : '../assets/PICS/nicEditorIcons.gif'}).panelInstance('editor');
+				/* data generator */
+				if(getParam('q') != "" && getParam('q') != null) dataGenerator(getParam('q'));
+				else p_formHandler('syncrom', 'addData', 'customer.html');
+
+				imagePreviewActivator('[name="picture"]');
+			}
+
+			function dataGenerator(idData){
+				var xData = p_getData('operation', 'customerFetch', '', "c.idData=" + idData);
+					xData = xData.feedData;
+
+				for (var key in xData) {
+					if($("[name='" + key + "']").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
+					else{ 
+						if(xData[key]!="") $("[name-tag=" + key + "]").attr('src', '../assets/users/' + xData[key]);
+						else $("[name-tag='" + key + "']").attr('src', '../assets/default/user.gif');
+					}
+				}
+
+				$('[name=email]').attr('readOnly', 'true');
+				p_formHandler('syncrom', 'updateData', 'customer.html');
 			}
 		</script>
 	</body>
