--- a/admin/formVideo.html
+++ b/admin/formVideo.html
@@ -53,13 +53,16 @@
 							'<textarea name="description" class="form-control" rows="5" id="editor"></textarea>'+
 						'</div>'+
 						'<div class="form-group">'+
-							'<label>File</label>'+
+							'<label>Video</label>'+
 						'</div>'+
+						// '<div class="form-group">'+
+						// 	'<p><i name="fileName">&nbsp;</i></p>'+
+						// '</div>' +
+						// '<div class="form-group">'+
+						// 	'<input name="video" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						// '</div>' +
 						'<div class="form-group">'+
-							'<p><i name="fileName">&nbsp;</i></p>'+
-						'</div>' +
-						'<div class="form-group">'+
-							'<input name="video" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+							'<input name="fileName" type="text" class="file form-control">'+
 						'</div>' +
 						'<div class="clearfix"></div>'+
 						'<div class="btn-group">'+
